# arm-learn

./: CMakeLists.txt  Interesting link  arm_learn.cpp
src/: arm_learn.cpp  arm_test_9685.cpp  arm_train.cpp  command_arm.cpp  learn.cpp  learn.h  old_arm_learn.cpp  servo.cpp  servo.h  servo_commands.cpp  servo_commands.h  target.cpp  test.cpp  train.cpp  train_arm.cpp  utils.cpp  utils.h
tensorflow/: 28_dense.csv  28_dense_labels.txt  28_paths.csv  image-label.tensor.py  new.py  paths_labels.txt  robot-arm.py  train.py  working-data-feed.py
